--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Manuel Reinhart",
   "license": "ISC",
   "dependencies": {
+    "colyseus": "^0.10.1",
+    "mongodb": "^3.2.2",
     "sequelize": "^5.1.0",
     "tedious": "^5.0.3"
   }
