--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Service for Quiz App",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  },  
   "author": "Manuel Reinhart",
   "license": "ISC",
   "dependencies": {
